Fix navbar wrap on mobile display.

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -59,6 +59,7 @@ nav {
   nav {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     margin-left: 0;
     margin-right: 0;
